--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,50 @@
+# Dependencies
+/node_modules/
+
+# Build output
+/dist/
+/dist-ssr/  # If you plan to use SSR and output to this folder
+
+# Environment variables - CRITICAL
+.env
+.env.*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.env # A more general catch-all, ensure your actual .env is above this if named differently
+
 # Logs
-logs
+logs/ # If you create a custom logs directory
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+yarn-debug.log* # If you use Yarn
+# pnpm-debug.log* # Uncomment if you use pnpm
 
-node_modules
-dist
-dist-ssr
-*.local
-.env
+# Vercel
+.vercel/
+
+# Operating System specific files
+.DS_Store
+Thumbs.db
+ehthumbs.db
 
 # Editor directories and files
+# Visual Studio Code
 .vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
 !.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
+# JetBrains IDEs (WebStorm, IntelliJ IDEA, etc.)
+.idea/
+
+# Vim swap files
+*.swp
+*.swo
+*.swx
+
+# Other
+# If you use TypeScript and have .tsbuildinfo files separate from your build output
+# *.tsbuildinfo # Often these are in the build dir (dist) anyway
