Convert coinbaseRank to JS and handle 429 properly and change ts to js for coinbase rank and picycle and fixed picycle indicator

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ ehthumbs.db
 # Other
 # If you use TypeScript and have .tsbuildinfo files separate from your build output
 # *.tsbuildinfo # Often these are in the build dir (dist) anyway
+.vercel
