Add BTC 4-Year Cycle chart (FourYearCycleCard), BTC history hook, and data events; update SignalCard, CoinbaseCard, WeeklyEmaCard display logic

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ ehthumbs.db
 # If you use TypeScript and have .tsbuildinfo files separate from your build output
 # *.tsbuildinfo # Often these are in the build dir (dist) anyway
 .vercel
+.env*.local
